Removed reference to Integer.valueOf(), as it is only present in Java 1.5.
--HG--
extra : convert_revision : svn%3A5c944932-937e-0410-aa5c-9344c804e6c3/trunk%40544